void attributes, composability test

--- a/TEST/Makefile
+++ b/TEST/Makefile
@@ -13,6 +13,10 @@ all:: test01
 test01: test01.dats ; $(PATSCC) $(PATSFLAGS) $(CFLAGS) $(C11FLAGS) -o $@ $< $(LFLAGS) 
 cleanall:: ; $(RMF) test01
 
+all:: test02
+test02: test02.dats ; $(PATSCC) $(PATSFLAGS) $(CFLAGS) $(C11FLAGS) -o $@ $< $(LFLAGS) 
+cleanall:: ; $(RMF) test02
+
 cleanall:: ; $(RMF) *_*ats.c
 
 clean:: cleanall
