--- a/TEST/Makefile
+++ b/TEST/Makefile
@@ -17,6 +17,10 @@ all:: test02
 test02: test02.dats ; $(PATSCC) $(PATSFLAGS) $(CFLAGS) $(C11FLAGS) -o $@ $< $(LFLAGS) 
 cleanall:: ; $(RMF) test02
 
+all:: test03
+test03: test03.dats ; $(PATSCC) $(PATSFLAGS) $(CFLAGS) $(C11FLAGS) -o $@ $< $(LFLAGS) 
+cleanall:: ; $(RMF) test03
+
 cleanall:: ; $(RMF) *_*ats.c
 
 clean:: cleanall
